@@ -48,6 +48,7 @@
 - fix master map mount options matching.
 - fix master map bogus keywork match.
 - fix fix map entry duplicate offset detection.
+- probe each nfs version in turn for singleton mounts.
 
 25/07/2012 autofs-5.0.7
 =======================
